<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="uploadMessage"
        android:text="@string/upload" />

    <Button
        android:id="@+id/resetReviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="undoChanges"
        android:text="@string/undo_changes" />

    <Button
        android:id="@+id/discardSmsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="discardText"
        android:text="@string/discard" />

    <Button
        android:id="@+id/cancelReviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="cancel"
        android:text="@android:string/cancel" />

</LinearLayout>