<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ParameterViewActivity"
    android:id="@+id/parameterLayout" >

    <TextView
        android:id="@+id/param_explanation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_heading"
    	android:paddingBottom="@dimen/activity_vertical_margin" />

    <ListView
    	android:id="@+id/param_list"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/add_param_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="openAddDialogue"
            android:text="@string/add_param" />

        <Button
            android:id="@+id/edit_param_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="openEditDialogue"
            android:text="@string/change_param" />

        <Button
            android:id="@+id/remove_param_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="openRemoveDialogue"
            android:text="@string/remove_param" />

    </LinearLayout>

</LinearLayout>
